@@ -1887,7 +1887,6 @@ tests += \
 	test-bus-kernel \
 	test-bus-kernel-bloom \
 	test-bus-kernel-benchmark \
-	test-bus-memfd \
 	test-bus-zero-copy \
 	test-bus-introspect \
 	test-bus-objects \
@@ -2037,13 +2036,6 @@ test_bus_kernel_benchmark_SOURCES = \
 	src/libsystemd/sd-bus/test-bus-kernel-benchmark.c
 
 test_bus_kernel_benchmark_LDADD = \
-	libsystemd-internal.la \
-	libsystemd-shared.la
-
-test_bus_memfd_SOURCES = \
-	src/libsystemd/sd-bus/test-bus-memfd.c
-
-test_bus_memfd_LDADD = \
 	libsystemd-internal.la \
 	libsystemd-shared.la
 
