@@ -151,6 +151,7 @@ systemd System and Service Manager
  	- use fabs on doubles in test-util;
  	- move test-device-nodes test to separate module udev;
  	- fix strtod test for real in test-util;
+ 	- remove test-bus-memfd test;
  * rules:
  	- consistently use "?*" instead of "*?";
  	- uaccess - add ID_SOFTWARE_RADIO;
